--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="img/favicon.png" >
-  <link rel="stylesheet" media="screen" href="/css/main.css" >
-  <link rel="stylesheet" media="screen" href="/css/pygments.css" >
+  <link rel="stylesheet" media="screen" href="css/main.css" >
+  
 </head>
 <body>
 
@@ -24,7 +24,7 @@
   <div id='wrapper'>
         <div id="organizers">
           Brought to you by the
-          <a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="/core">team</a>
+          <a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="core">team</a>
         </div>
       
     <div id="header">
