Adding core team and mailing list registration.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,12 @@
   <div id='wrapper'>
         <div id="organizers">
           Brought to you by the
-          <a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="core">team</a>
+          <a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="/core.html">team</a>
         </div>
       
     <div id="header">
       <h1><a href="/">NodeBots</a></h1>
-      <h2>Hack Hardware With JS</h2>
+      <h2>{{ page.introTitle }}</h2>
     </div>
 	  <div id="holder">
       
