--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ h3 { font-family: 'Monda', sans-serif; font-size: 26px; margin-bottom: 6px; padd
 
 p { margin-top: 0px;}
 
-#upcoming { text-align: center; padding: 0px 0px 20px 0px;}
+.events { text-align: center; padding: 0px 0px 20px 0px;}
 #content ul.team {
 	width:512px;
   list-style-type: none;
