Reorder the index page, include the jsconf2013 post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
   <title>{{ page.title }}</title>
   <link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="img/favicon.png" >
-  <link rel="stylesheet" media="screen" href="css/main.css" >
-  
+  <link rel="shortcut icon" href="/img/favicon.png" >
+  <link rel="stylesheet" media="screen" href="/css/main.css" >
+
 </head>
 <body>
 
@@ -26,13 +26,13 @@
           Brought to you by the
           <a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="/core.html">team</a>
         </div>
-      
+
     <div id="header">
       <h1><a href="/">NodeBots</a></h1>
       <h2>{{ page.introTitle }}</h2>
     </div>
 	  <div id="holder">
-      
+
 	    <div id="content">
 	      {{ content }}
 	    </div>
