added new logo files

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ article:after,aside:after,div:after,form:after,header:after,nav:after,section:af
 body {
 	margin: 0px;
 	padding: 0px;
-	background: #f2da46 url(/img/j5.png) bottom right no-repeat;
+	background: #f3df49 url(/img/nodebot.png) bottom right no-repeat;
 
 	background-attachment: fixed;
 	margin: 0;
