--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,8 @@
   <link rel="stylesheet" media="screen" href="/css/main.css" >
 </head>
 <body>
-	<!-- GitHub Banner -->
-  <!--<a class="gh" href="https://github.com/nodebots/www"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 10;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>-->
-  <!--Brought to you by the-->
-  <!--<a href="https://twitter.com/nodebots/following">@nodebots</a> core <a href="/core.html">team</a>-->
-
   <header id="header">
+
     <div class="nodebot">
       <div class="icon">
         <div class="bobble"></div>
@@ -33,7 +29,7 @@
         <div class="neck"></div>
         <div class="neck"></div>
       </div>
-    </div> <!-- end of gratuitious nodebot -->
+    </div> <!-- end nodebot -->
 
     <h1><a href="/">NodeBots</a></h1>
     <h2>{{ page.introTitle }}</h2>
@@ -59,10 +55,6 @@
       <a class="github" href="https://github.com/nodebots" title="Code on GitHub"></a>
       <a class="twitter" href="https://twitter/nodebots" title="News on Twitter"></a>
     </div>
-    <div class="credits">
-      <!--<p class="copyright">Copyright &copy; <script>document.write((new Date()).getFullYear());</script> Iterative Designs</span></p>-->
-    </div>
   </footer>
-
 </body>
 </html>
