Fix twitter url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <footer id="footer">
     <div class="badges">
       <a class="github" href="https://github.com/nodebots" title="Code on GitHub"></a>
-      <a class="twitter" href="https://twitter/nodebots" title="News on Twitter"></a>
+      <a class="twitter" href="https://twitter.com/nodebots" title="News on Twitter"></a>
     </div>
   </footer>
 </body>
