Up header image quality. Add credit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,6 @@
   <meta http-equiv="expires" content="Thu, 01 Jan 1970 13:37:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
   <title>{{ page.title }}</title>
-  <!--<link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'>-->
   <link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="/img/favicon.png" >
   <link rel="stylesheet" media="screen" href="/css/main.css" >
@@ -44,6 +43,8 @@
           2014</p>
       </aside>
     </a>
+
+    <a class="credit" href="https://twitter.com/cwaring">Photo: Chris Waring</a>
   </header>
 
   <div class="content">
