Update date for nodebots day 2015!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,11 @@
         <h1>
           International<br/>
           NodeBots<br/>
-          Day</h1>
-        <p>26/27July<br>
-          2014</p>
+          Day
+        </h1>
+        <p>25 July<br>
+          2015
+        </p>
       </aside>
     </a>
 
