--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@
           NodeBots<br/>
           Day
         </h1>
-        <p>25 July<br>
-          2015
+        <p>July<br>
+          2016
         </p>
       </aside>
     </a>
