Announcing NodeBots Day 2016 on July 30th!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
           NodeBots<br/>
           Day
         </h1>
-        <p>July<br>
+        <p>July 30th<br>
           2016
         </p>
       </aside>
