--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,47 +15,12 @@
   <link rel="stylesheet" media="screen" href="/css/main.css" >
 </head>
 <body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-53679374-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  {% include tracking.html %}
   <header id="header">
-
-    <div class="nodebot">
-      <div class="icon">
-        <div class="bobble"></div>
-        <div class="antenna"></div>
-        <div class="head">
-          <div class="eye left"></div>
-          <div class="eye right"></div>
-        </div>
-        <div class="neck"></div>
-        <div class="neck"></div>
-      </div>
-    </div> <!-- end nodebot -->
-
-    <h1><a href="/">NodeBots</a></h1>
+    <a href="/">{% include nodebot-logo.html %}</a>
+    <h1>NodeBots</h1>
     <h2>{{ page.introTitle }}</h2>
-
-    <a href="https://github.com/nodebots/nodebotsday">
-      <aside class="notice">
-        <h1>
-          International<br/>
-          NodeBots<br/>
-          Day
-        </h1>
-        <p>July 30th<br>
-          2016
-        </p>
-      </aside>
-    </a>
-
+    {% include nodebots-day-star.html %}
     <a class="credit" href="https://twitter.com/cwaring">Photo: Chris Waring</a>
   </header>
 
