add in homepages of the nodebots day events

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <nav>
     <div class="nav-container">
       <a href="#about">About</a>
-      <a href="#nodebots-day">International Nodebots day</a>
+      <a href="#nodebots-day">Nodebots Day</a>
       <a href="#getting-started">Getting Started</a>
       <a href="#meetups">Meetups</a>
     </div>
@@ -32,7 +32,7 @@
   </header>
 
   {{ content }}
-  
+
   <footer id="footer">
     <div class="badges">
       <a class="github" href="https://github.com/nodebots" title="Code on GitHub"></a>
